...
      android:textColor="@color/black" />

    <Button
      style="?materialButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Contained Button" />

    <Button
      style="?materialButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Wide contained button" />
...
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_pirates"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
          android:text="Option 1"/>

        <RadioButton android:id="@+id/radio_ninjas"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
          android:text="Option 2"/>
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
...
