...
    <string name="action_account_settings">"Account"</string>
    <string name="action_users_settings">"Profiles"</string>
    <string name="action_go_to_slideshow">"Take the tour"</string>
    <string name="action_about">"About"</string>
    <string name="action_logout">"Logout"</string>
    <string name="action_spread_the_word">"Spread the word"</string>
    <string name="action_help">"Help Center"</string>
    <string name="action_change_profile">"Change profile"</string>
    <string name="action_edit_profile">"Edit profile"</string>

    <!-- LOGIN AND REGISTRATION -->
    <string name="login">"Login"</string>
    <string name="connect_">"Connect   &gt;"</string>
...

    <!-- Settings ToothBrush Fragment -->
    <string name="user_mode_title">"Toothbrush user"</string>

    <!-- Settings ToothBrush Fragment -->
    <string name="toothbrush_information">"Toothbrush information"</string>
    <string name="title_toothbrush">"Toothbrush ID"</string>
    <string name="battery_level">"Battery level"</string>
    <string name="find_toothbrush">"Identify toothbrush"</string>
    <string name="blink_toothbrush">"Make your toothbrush blink"</string>
    <string name="toothbrush_blinking">"Blinking"</string>
    <string name="ota_toothbrush_title">"Firmware Version"</string>
    <string name="hardware_version_title">"Hardware Version"</string>
...
